cluster/applications/cloud/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
  labels:
    name: cloud
